Changes in v1.5.8: (Aug. 08, 2016.)
========================================================================

This is a minor bug fix and maintenance release:

- Software renderer: Fixed a reported crash if the engine is compiled
  with certain Visual Studio versions (bug #62.)

- Software renderer: Fixed sky scaling issues, thanks to Szilard Biro.
 (fix found in 'ToChriS' quake source.)

- Hexenworld server: Added "-protocol x" command line option to force
  the server to use a specific protocol (25 or 26), if so required.

- Amiga: Video fixes. On AROS, the game does not 'freeze' in fullscreen
  mode anymore if the 'Timidity:' assign is not present.

- Amiga: m68k-amigaos support. (Use VBCC as the compiler, gcc has code
  generation issues.)

- Windows: Visual Studio builds no longer require yasm or nasm. Tested
  compilation using VS2015-update/2.

- DOS, PCI sound driver: Updates, more Intel HDA chipsets recognized.

- DOS, 3dfx opengl: Macronix (MX86251) variants of Voodoo Rush boards
  are now functional.

- DOS, 3dfx opengl: Further updates/fixes to opengl and glide drivers.
  Updates to DXE exports so that more opengl driver builds would work
  without requiring an engine recompile.

- All platforms, gameplay: Fixed an issue with the rider bosses Death,
  Pestilence and War in coop mode. (as reported by Spike and Korax.)

- Other minor fixes/tidy-ups elsewhere in the source.


========================================================================
Changes in v1.5.7: (Jan. 10, 2016.)
========================================================================

- All platforms, gameplay, mission pack: fixed an hcode bug which would
  make the spiders seemingly invincible for a difficulty-depending time.

- All platforms, gameplay: Crusader partial heal at certain experience
  thresholds now starts at level 3 to be consistent with the manual.

- All platforms, gameplay: Many small HexenC fixes and clean-ups.
